# CplusplusNewFeatures

./: LICENSE  README.md
00.testcodes/: CMakeLists.txt
00.testcodes/code/: CMakeLists.txt  main.cpp  test_align.hpp  test_auto.hpp  test_decltype.hpp  test_default_parameter.hpp  test_distinguish_parentheses_braces.hpp  test_ebo.hpp  test_exception.hpp  test_exception1.hpp  test_exception2.hpp  test_exception_ctor.hpp  test_exception_errorprocess.hpp  test_exception_function_try_blocks.hpp  test_friend.hpp  test_global_operator_new.hpp  test_hybrid.hpp  test_initializer_list.cpp  test_initializer_list.h  test_initializer_list2.hpp  test_new.cpp  test_new.h  test_operator_new.hpp  test_operator_new_supply.hpp  test_override_final.hpp  test_scope_enum.hpp  test_starthis.hpp  test_static.hpp  test_swap.hpp  test_typedef_using.hpp  test_virtual_physics_address.hpp
00.testcodes/doc/: QA.DOCX  daisy.txt
